--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,9 @@
 </head>
 <body>
     <h1>Hello I am Sarat. Welcome to My Portfolio</h1>
-    <p>Hello! I am Mastering Python. Here are some of my projects:</p>
+    <p>I am trying to learn and master Python. Here are some of my projects:</p>
     <ul>
-	
-        <li><a href="https://github.com/saratkrishna1995/saratkrishna1995_py.github.io/Brand Generator.py">Brand Generator</a></li>
+        <li><a href="https://github.com/saratkrishna1995/saratkrishna1995_py.github.io/blob/main/Brand%20Generator.py">Brand Generator</a></li>
     </ul>
 </body>
 </html>
